--- a/Proyecto/config.env
+++ b/Proyecto/config.env
@@ -1,3 +1,3 @@
 PORT = 4001
 
-MONGO_URL=mongodb+srv://userResonancia:resonanciapassword@cluster0.bjfkwkp.mongodb.net/ResonanciaDB?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL=mongodb+srv://userResonancia:passwordResonancia@cluster0.bjfkwkp.mongodb.net/ResonanciaDB?retryWrites=true&w=majority&appName=Cluster0
